@@ -1,1 +1,0 @@
-["null char \u0000 in string"]
